Tickets finalized